--- a/example16/links2-download.html
+++ b/example16/links2-download.html
@@ -37,7 +37,7 @@
       <li><a href="blue.html">Link me to the blue whale image</a></li>
       <li><a href="narwhal.html">Link me to the narwhal image</a></li>
       <li><a href="https://www.google.co.uk">Link me to Google image search</a></li>
-      <li><a href="bottom">Link me to the paragraph at the bottom of the page</a></li>
+      <li><a href="#bottom">Link me to the paragraph at the bottom of the page</a></li>
     </ul>
 
     <div></div>
