--- a/example18/index.html
+++ b/example18/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Extra video features example</title>
+        <style>
+        video {
+            background: black;
+        }
+        </style>
     </head>
-    <main>
+    <body>
+        <h1>Rabit video example</video></h1>
         <video controls>
             <source src="rabbit320.mp4" type="video/mp4">
         </video>
+        <h1>Audio example</h1>
         <audio controls>
             <source src="viper.mp3" type="audio/mp3">
         </audio>
-    </main>
+    </body>
 </html>
